--- a/CSS-Basics/main.css
+++ b/CSS-Basics/main.css
@@ -1,3 +1,12 @@
-section {
-  background: rgb(216, 87, 87);
+#product-overview {
+  background: rgb(226, 90, 119);
+}
+
+h1 {
+  color: white;
+  font-family: "Arvo", serif;
+}
+
+.section-title {
+  color: #2ddf5c;
 }
