--- a/CSS-Basics/main.css
+++ b/CSS-Basics/main.css
@@ -1,12 +1,42 @@
-#product-overview {
-  background: rgb(226, 90, 119);
+* {
+  box-sizing: border-box;
 }
 
-h1 {
+body {
+  margin: 0;
+}
+
+#product-overview {
+  background: rgb(226, 90, 119);
+  padding: 10px;
+  height: 528px;
+  width: 100%;
+}
+
+#product-overview h1 {
   color: white;
   font-family: "Arvo", serif;
 }
 
 .section-title {
   color: #2ddf5c;
+  font-family: "Arvo", serif;
+}
+
+.main-header {
+  width: 100%;
+  background: #2ddf5c;
+  padding: 8px 16px;
+}
+
+.main-header > div {
+  display: inline-block;
+}
+
+.main-nav {
+  display: inline-block;
+}
+
+.main-nav__item {
+  display: inline-block;
 }
