--- a/CSS-Basics/main.css
+++ b/CSS-Basics/main.css
@@ -4,10 +4,11 @@
 
 body {
   margin: 0;
+  font-family: "Arvo", serif;
 }
 
 #product-overview {
-  background: rgb(226, 90, 119);
+  background: rgb(236, 54, 93);
   padding: 10px;
   height: 528px;
   width: 100%;
@@ -26,15 +27,31 @@ body {
 .main-header {
   width: 100%;
   background: #2ddf5c;
-  padding: 8px 16px;
+  padding: 4px 16px;
 }
 
 .main-header > div {
   display: inline-block;
 }
 
+.main-header__brand {
+  color: #0e4f1f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 22px;
+}
+
 .main-nav {
   display: inline-block;
+  text-align: right;
+  width: calc(100% - 70px);
+  vertical-align: middle;
+}
+
+.main_nav__items {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .main-nav__item {
