--- a/CSS-Basics/main.css
+++ b/CSS-Basics/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 #product-overview {
-  background: rgb(236, 54, 93);
+  background: url("freedom.jpg");
   padding: 10px;
   height: 528px;
   width: 100%;
@@ -63,12 +63,25 @@ body {
   text-decoration: none;
   color: #0e4f1f;
   font-weight: bold;
+  padding: 3px 0;
 }
 
-.main-nav__item a:hover {
-  color: white;
-}
-
+.main-nav__item a:hover,
 .main-nav__item a:active {
   color: white;
+  border-bottom: 3px solid white;
+}
+
+.main-nav__item--cta a {
+  color: white;
+  background: #ff1b68;
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+  color: #ff1b68;
+  background: white;
+  border: none;
 }
