refactor: edited text color of plans

--- a/CSS-Basics/main.css
+++ b/CSS-Basics/main.css
@@ -49,6 +49,22 @@ body {
   border-radius: 8px;
 }
 
+.plan__title {
+  color: #0e4f1f;
+}
+
+.plan__price {
+  color: #858585;
+}
+
+.plan--highlighted .plan__title {
+  color: white;
+}
+
+.plan--highlighted .plan__price {
+  color: #0e4f1f;
+}
+
 .plan__features {
   list-style: none;
   margin: 0;
