refactor: added button styles

--- a/CSS-Basics/main.css
+++ b/CSS-Basics/main.css
@@ -75,6 +75,12 @@ body {
   margin: 8px 0;
 }
 
+.button {
+  background: #0e4f1f;
+  color: white;
+  font: inherit;
+}
+
 .main-header {
   width: 100%;
   background: #2ddf5c;
