--- a/CSS-Basics/shared.css
+++ b/CSS-Basics/shared.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: "Arvo", serif;
+}
+
 .main-header {
   width: 100%;
   background: #2ddf5c;
