--- a/CSS-Basics/packages/packages.css
+++ b/CSS-Basics/packages/packages.css
@@ -13,7 +13,7 @@ main {
 .package:hover,
 .package:active {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  border-color: #ff1b68;
+  border-color: #ff1b68 !important;
 }
 
 .package a {
@@ -36,12 +36,20 @@ main {
   color: #0e4f1f;
 }
 
+.clearfix {
+  clear: both;
+}
+
 #plus {
   background: rgba(213, 255, 220, 0.95);
 }
 
 #free {
   background: rgba(234, 252, 237, 0.95);
+  float: right;
+  border-right: none;
+  border-left: 4px solid #0e4f1f;
+  text-align: right;
 }
 
 #premium {
