--- a/CSS-Basics/packages/packages.css
+++ b/CSS-Basics/packages/packages.css
@@ -13,7 +13,7 @@ main {
 .package:hover,
 .package:active {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  border-color: #ff1b68 !important;
+  border-color: #ff1b68;
 }
 
 .package a {
@@ -50,6 +50,11 @@ main {
   border-right: none;
   border-left: 4px solid #0e4f1f;
   text-align: right;
+}
+
+#free:hover,
+#free:active {
+  border-left-color: #ff1b68;
 }
 
 #premium {
