--- a/CSS-Background-Study/main.css
+++ b/CSS-Background-Study/main.css
@@ -1,8 +1,10 @@
 #product-overview {
-  background-image: url("freedom.jpg");
+  background-image: url("images/freedom.jpg");
   background-size: cover;
-  background-position: center 50% 50%;
+  background-position: left 10% bottom 20%;
   background-repeat: no-repeat;
+  background-origin: border-box;
+  background-clip: border-box;
   width: 100%;
   height: 528px;
   padding: 10px;
