--- a/CSS-Background-Study/main.css
+++ b/CSS-Background-Study/main.css
@@ -1,5 +1,6 @@
 #product-overview {
-  background-image: url("images/freedom.jpg");
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.6), transparent),
+    url("images/freedom.jpg"), #ff1b68;
   background-size: cover;
   background-position: left 10% bottom 20%;
   background-repeat: no-repeat;
