--- a/CSS-Background-Study/customers/customers.css
+++ b/CSS-Background-Study/customers/customers.css
@@ -1,5 +1,5 @@
 .testimonial {
-  font-size: 20px;
+  font-size: 1.2em;
   margin: 48px 0;
 }
 
@@ -9,11 +9,12 @@
 }
 
 .testimonial:first-of-type {
-  margin-top: 96px;
+  margin-top: 6rem;
 }
 
 .testimonial__image-container {
   display: inline-block;
+  max-width: 580px;
   width: 65%;
   vertical-align: middle;
   box-shadow: 3px 3px 7px 3px rgba(0, 0, 0, 0.3);
@@ -26,7 +27,7 @@
 
 .testimonial__info {
   text-align: right;
-  padding: 14px;
+  padding: 0.9rem;
   display: inline-block;
   vertical-align: middle;
   width: 30%;
@@ -42,12 +43,13 @@
 
 .testimonial__name {
   margin: 3px;
+  font-size: 2em;
   color: #ff5454;
 }
 
 .testimonial__subtitle {
   margin: 0;
-  font-size: 18px;
+  font-size: 1.1rem;
   color: #ccc;
 }
 
