--- a/CSS-Background-Study/main.css
+++ b/CSS-Background-Study/main.css
@@ -1,15 +1,19 @@
 #product-overview {
-  background: linear-gradient(to top, rgba(80, 68, 18, 0.6), transparent),
-    url("images/freedom.jpg"), #ff1b68;
-  background-size: cover;
-  background-position: left 10% bottom 20%;
-  background-repeat: no-repeat;
-  background-origin: border-box;
-  background-clip: border-box;
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
+    url("images/freedom.jpg") left 10% bottom 20% / cover no-repeat border-box,
+    #ff1b68;
+  /* background-image: url("freedom.jpg");
+    background-size: cover;
+    background-position: left 10% bottom 20%; */
+  /* background-repeat: no-repeat;
+    background-origin: border-box;
+    background-clip: border-box; */
+  /* background-image: linear-gradient(180deg, red 70%, blue 60%, rgba(0,0,0,0.5)); */
+  /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
   width: 100%;
   height: 528px;
-  padding: 10px;
-  margin-top: 43px;
+  margin-top: 2.75rem;
+  /* border: 5px dashed red; */
   position: relative;
 }
 
@@ -22,9 +26,8 @@
   color: white;
   font-family: "Arvo", sans-serif;
   position: absolute;
-  bottom: 0%;
+  bottom: 5%;
   left: 3%;
-  width: 100%;
 }
 
 .plan__list {
@@ -36,12 +39,12 @@
 .plan {
   background: #d5ffdc;
   text-align: center;
-  padding: 16px;
-  margin: 8px;
+  padding: 1rem;
+  margin: 0.5rem;
   display: inline-block;
   width: 30%;
   vertical-align: middle;
-  border-radius: 4px;
+  border-radius: 3px;
 }
 
 .plan--highlighted {
@@ -53,7 +56,7 @@
 .plan__annotation {
   background: white;
   color: #19b84c;
-  padding: 8px;
+  padding: 0.5rem;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
 }
@@ -81,18 +84,18 @@
 }
 
 .plan__feature {
-  margin: 8px 0;
+  margin: 0.5rem 0;
 }
 
 #key-features {
   background: #ff1b68;
-  margin-top: 80px;
-  padding: 16px;
+  margin-top: 5rem;
+  padding: 1rem;
 }
 
 #key-features .section-title {
   color: white;
-  margin: 32px;
+  margin: 2rem;
 }
 
 .key-feature__list {
@@ -100,7 +103,6 @@
   margin: 0;
   padding: 0;
   text-align: center;
-  border-radius: 4px;
 }
 
 .key-feature {
@@ -116,14 +118,14 @@
   border: 2px solid #424242;
   border-radius: 50%;
   margin: auto;
-  padding: 20px;
+  padding: 1.5rem;
 }
 
 .key-feature__description {
   text-align: center;
   font-weight: bold;
   color: white;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 /* h1 {
